--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.snomed.languages</groupId>
 	<artifactId>snomed-scg-parser</artifactId>
-	<version>1.1.1</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<name>SNOMED CT Compositional Grammar Parser</name>
 	<description>A parser for SNOMED CT post-coordinated expressions written in SNOMED Compositional Grammar.</description>
 
