--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.snomed</groupId>
 		<artifactId>snomed-parent-bom</artifactId>
-		<version>1.0.4-SNAPSHOT</version>
+		<version>1.0.4</version>
 	</parent>
 
 	<groupId>org.snomed.languages</groupId>
 	<artifactId>snomed-scg-parser</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.1</version>
 	<name>SNOMED CT Compositional Grammar Parser</name>
 	<description>A parser for SNOMED CT post-coordinated expressions written in SNOMED Compositional Grammar.</description>
 
