--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.snomed</groupId>
 		<artifactId>snomed-parent-bom</artifactId>
-		<version>1.0.4</version>
+		<version>1.0.11-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.snomed.languages</groupId>
