--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.snomed.languages</groupId>
 	<artifactId>snomed-scg-parser</artifactId>
-	<version>3.0.0</version>
+	<version>3.1.0-SNAPSHOT</version>
 	<name>SNOMED CT Compositional Grammar Parser</name>
 	<description>A parser for SNOMED CT post-coordinated expressions written in SNOMED Compositional Grammar.</description>
 
